// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When parsing Blitzen When parsing Blitzen V1 should be able to merge multiple collections 1`] = `
Array [
  Object {
    "current": -13.6,
    "direction": "GROUND",
    "latitude": 3.79772,
    "longitude": 105.911369,
    "timeMillis": 1592611200323,
  },
  Object {
    "current": 0,
    "direction": "CLOUD",
    "latitude": 39.344666,
    "longitude": -76.645326,
    "timeMillis": 1592611200628,
  },
  Object {
    "current": -6.4,
    "direction": "GROUND",
    "latitude": 39.093173,
    "longitude": -76.516297,
    "timeMillis": 1592611200629,
  },
  Object {
    "current": 0,
    "direction": "CLOUD",
    "latitude": 39.359796,
    "longitude": -76.751111,
    "timeMillis": 1592611200631,
  },
  Object {
    "current": 0,
    "direction": "CLOUD",
    "latitude": 39.357346,
    "longitude": -76.699283,
    "timeMillis": 1592611200631,
  },
  Object {
    "current": -66.2,
    "direction": "GROUND",
    "latitude": 39.360246,
    "longitude": -76.627881,
    "timeMillis": 1592611200631,
  },
  Object {
    "current": -65,
    "direction": "GROUND",
    "latitude": 39.355165,
    "longitude": -76.623955,
    "timeMillis": 1592611200631,
  },
  Object {
    "current": 0,
    "direction": "CLOUD",
    "latitude": 39.283483,
    "longitude": -76.666255,
    "timeMillis": 1592611200653,
  },
  Object {
    "current": -20.3,
    "direction": "GROUND",
    "latitude": 39.355049,
    "longitude": -76.568837,
    "timeMillis": 1592611200653,
  },
  Object {
    "current": 0,
    "direction": "CLOUD",
    "latitude": 39.390466,
    "longitude": -76.522296,
    "timeMillis": 1592611200653,
  },
  Object {
    "current": 0,
    "direction": "CLOUD",
    "latitude": 34.163358,
    "longitude": -80.874821,
    "timeMillis": 1592611260385,
  },
  Object {
    "current": -26,
    "direction": "GROUND",
    "latitude": 30.250675,
    "longitude": -82.357371,
    "timeMillis": 1592611260552,
  },
  Object {
    "current": 0,
    "direction": "CLOUD",
    "latitude": 30.263559,
    "longitude": -82.353037,
    "timeMillis": 1592611260552,
  },
  Object {
    "current": -41.3,
    "direction": "GROUND",
    "latitude": 16.24059,
    "longitude": -91.441549,
    "timeMillis": 1592611260800,
  },
  Object {
    "current": -25.2,
    "direction": "GROUND",
    "latitude": 59.46069,
    "longitude": 26.773836,
    "timeMillis": 1592611261000,
  },
  Object {
    "current": -15.1,
    "direction": "GROUND",
    "latitude": 59.507565,
    "longitude": 26.923863,
    "timeMillis": 1592611261028,
  },
  Object {
    "current": -14,
    "direction": "GROUND",
    "latitude": 59.500731,
    "longitude": 26.904206,
    "timeMillis": 1592611261077,
  },
  Object {
    "current": 95.3,
    "direction": "GROUND",
    "latitude": 56.359199,
    "longitude": 11.790852,
    "timeMillis": 1592611261296,
  },
  Object {
    "current": 0,
    "direction": "CLOUD",
    "latitude": 32.374309,
    "longitude": -101.650011,
    "timeMillis": 1592611261382,
  },
  Object {
    "current": -29.9,
    "direction": "GROUND",
    "latitude": 32.777182,
    "longitude": -101.366501,
    "timeMillis": 1592611261382,
  },
  Object {
    "current": -56.6,
    "direction": "GROUND",
    "latitude": 49.79451,
    "longitude": -79.357062,
    "timeMillis": 1592611320077,
  },
  Object {
    "current": 28.7,
    "direction": "GROUND",
    "latitude": 39.873289,
    "longitude": -101.955629,
    "timeMillis": 1592611320235,
  },
  Object {
    "current": 19,
    "direction": "GROUND",
    "latitude": 39.87736,
    "longitude": -101.995631,
    "timeMillis": 1592611320289,
  },
  Object {
    "current": -13.1,
    "direction": "GROUND",
    "latitude": 3.354772,
    "longitude": 105.181056,
    "timeMillis": 1592611320981,
  },
  Object {
    "current": -18.2,
    "direction": "GROUND",
    "latitude": 35.098912,
    "longitude": -79.969339,
    "timeMillis": 1592611321364,
  },
  Object {
    "current": -35.9,
    "direction": "GROUND",
    "latitude": 34.980473,
    "longitude": -80.069913,
    "timeMillis": 1592611321370,
  },
  Object {
    "current": -29.8,
    "direction": "GROUND",
    "latitude": 3.83109,
    "longitude": 105.974937,
    "timeMillis": 1592611321517,
  },
  Object {
    "current": 0,
    "direction": "CLOUD",
    "latitude": 3.858295,
    "longitude": 105.677619,
    "timeMillis": 1592611321544,
  },
  Object {
    "current": -11,
    "direction": "GROUND",
    "latitude": 3.811184,
    "longitude": 105.9039,
    "timeMillis": 1592611321544,
  },
  Object {
    "current": -7.8,
    "direction": "GROUND",
    "latitude": 3.858444,
    "longitude": 105.678063,
    "timeMillis": 1592611321561,
  },
]
`;

exports[`When parsing Blitzen When parsing Blitzen V1 should be able to merge two collections 1`] = `
Array [
  Object {
    "current": -13.6,
    "direction": "GROUND",
    "latitude": 3.79772,
    "longitude": 105.911369,
    "timeMillis": 1592611200323,
  },
  Object {
    "current": 0,
    "direction": "CLOUD",
    "latitude": 39.344666,
    "longitude": -76.645326,
    "timeMillis": 1592611200628,
  },
  Object {
    "current": -6.4,
    "direction": "GROUND",
    "latitude": 39.093173,
    "longitude": -76.516297,
    "timeMillis": 1592611200629,
  },
  Object {
    "current": 0,
    "direction": "CLOUD",
    "latitude": 39.359796,
    "longitude": -76.751111,
    "timeMillis": 1592611200631,
  },
  Object {
    "current": 0,
    "direction": "CLOUD",
    "latitude": 39.357346,
    "longitude": -76.699283,
    "timeMillis": 1592611200631,
  },
  Object {
    "current": -66.2,
    "direction": "GROUND",
    "latitude": 39.360246,
    "longitude": -76.627881,
    "timeMillis": 1592611200631,
  },
  Object {
    "current": -65,
    "direction": "GROUND",
    "latitude": 39.355165,
    "longitude": -76.623955,
    "timeMillis": 1592611200631,
  },
  Object {
    "current": 0,
    "direction": "CLOUD",
    "latitude": 39.283483,
    "longitude": -76.666255,
    "timeMillis": 1592611200653,
  },
  Object {
    "current": -20.3,
    "direction": "GROUND",
    "latitude": 39.355049,
    "longitude": -76.568837,
    "timeMillis": 1592611200653,
  },
  Object {
    "current": 0,
    "direction": "CLOUD",
    "latitude": 39.390466,
    "longitude": -76.522296,
    "timeMillis": 1592611200653,
  },
  Object {
    "current": 0,
    "direction": "CLOUD",
    "latitude": 34.163358,
    "longitude": -80.874821,
    "timeMillis": 1592611260385,
  },
  Object {
    "current": -26,
    "direction": "GROUND",
    "latitude": 30.250675,
    "longitude": -82.357371,
    "timeMillis": 1592611260552,
  },
  Object {
    "current": 0,
    "direction": "CLOUD",
    "latitude": 30.263559,
    "longitude": -82.353037,
    "timeMillis": 1592611260552,
  },
  Object {
    "current": -41.3,
    "direction": "GROUND",
    "latitude": 16.24059,
    "longitude": -91.441549,
    "timeMillis": 1592611260800,
  },
  Object {
    "current": -25.2,
    "direction": "GROUND",
    "latitude": 59.46069,
    "longitude": 26.773836,
    "timeMillis": 1592611261000,
  },
  Object {
    "current": -15.1,
    "direction": "GROUND",
    "latitude": 59.507565,
    "longitude": 26.923863,
    "timeMillis": 1592611261028,
  },
  Object {
    "current": -14,
    "direction": "GROUND",
    "latitude": 59.500731,
    "longitude": 26.904206,
    "timeMillis": 1592611261077,
  },
  Object {
    "current": 95.3,
    "direction": "GROUND",
    "latitude": 56.359199,
    "longitude": 11.790852,
    "timeMillis": 1592611261296,
  },
  Object {
    "current": 0,
    "direction": "CLOUD",
    "latitude": 32.374309,
    "longitude": -101.650011,
    "timeMillis": 1592611261382,
  },
  Object {
    "current": -29.9,
    "direction": "GROUND",
    "latitude": 32.777182,
    "longitude": -101.366501,
    "timeMillis": 1592611261382,
  },
]
`;

exports[`When parsing Blitzen When parsing Blitzen V1 should return valid Blitzen V1 1`] = `
Array [
  Object {
    "current": -13.6,
    "direction": "GROUND",
    "latitude": 3.79772,
    "longitude": 105.911369,
    "timeMillis": 1592611200323,
  },
  Object {
    "current": 0,
    "direction": "CLOUD",
    "latitude": 39.344666,
    "longitude": -76.645326,
    "timeMillis": 1592611200628,
  },
  Object {
    "current": -6.4,
    "direction": "GROUND",
    "latitude": 39.093173,
    "longitude": -76.516297,
    "timeMillis": 1592611200629,
  },
  Object {
    "current": 0,
    "direction": "CLOUD",
    "latitude": 39.359796,
    "longitude": -76.751111,
    "timeMillis": 1592611200631,
  },
  Object {
    "current": 0,
    "direction": "CLOUD",
    "latitude": 39.357346,
    "longitude": -76.699283,
    "timeMillis": 1592611200631,
  },
  Object {
    "current": -66.2,
    "direction": "GROUND",
    "latitude": 39.360246,
    "longitude": -76.627881,
    "timeMillis": 1592611200631,
  },
  Object {
    "current": -65,
    "direction": "GROUND",
    "latitude": 39.355165,
    "longitude": -76.623955,
    "timeMillis": 1592611200631,
  },
  Object {
    "current": 0,
    "direction": "CLOUD",
    "latitude": 39.283483,
    "longitude": -76.666255,
    "timeMillis": 1592611200653,
  },
  Object {
    "current": -20.3,
    "direction": "GROUND",
    "latitude": 39.355049,
    "longitude": -76.568837,
    "timeMillis": 1592611200653,
  },
  Object {
    "current": 0,
    "direction": "CLOUD",
    "latitude": 39.390466,
    "longitude": -76.522296,
    "timeMillis": 1592611200653,
  },
]
`;

exports[`When parsing Blitzen When parsing Blitzen V2 should be able to merge multiple collections 1`] = `
Array [
  Object {
    "amplitude": -13.6,
    "dateTime": "2020-06-20T00:00:00.323Z",
    "direction": "GROUND",
    "ellipse": Object {
      "bearing": -12,
      "major": 0.25,
      "minor": 0.25,
    },
    "latitude": 3.79772,
    "longitude": 105.911369,
    "timeMillis": 1592611200323,
  },
  Object {
    "amplitude": 0,
    "dateTime": "2020-06-20T00:00:00.628Z",
    "direction": "CLOUD",
    "ellipse": Object {
      "bearing": -49,
      "major": 0.25,
      "minor": 0.25,
    },
    "latitude": 39.344666,
    "longitude": -76.645326,
    "timeMillis": 1592611200628,
  },
  Object {
    "amplitude": -6.4,
    "dateTime": "2020-06-20T00:00:00.629Z",
    "direction": "GROUND",
    "ellipse": Object {
      "bearing": 9,
      "major": 0.25,
      "minor": 0.25,
    },
    "latitude": 39.093173,
    "longitude": -76.516297,
    "timeMillis": 1592611200629,
  },
  Object {
    "amplitude": 0,
    "dateTime": "2020-06-20T00:00:00.631Z",
    "direction": "CLOUD",
    "ellipse": Object {
      "bearing": -28,
      "major": 0.5,
      "minor": 0.25,
    },
    "latitude": 39.359796,
    "longitude": -76.751111,
    "timeMillis": 1592611200631,
  },
  Object {
    "amplitude": 0,
    "dateTime": "2020-06-20T00:00:00.631Z",
    "direction": "CLOUD",
    "ellipse": Object {
      "bearing": -80,
      "major": 1.75,
      "minor": 0.25,
    },
    "latitude": 39.357346,
    "longitude": -76.699283,
    "timeMillis": 1592611200631,
  },
  Object {
    "amplitude": -66.2,
    "dateTime": "2020-06-20T00:00:00.631Z",
    "direction": "GROUND",
    "ellipse": Object {
      "bearing": -41,
      "major": 0.25,
      "minor": 0.25,
    },
    "latitude": 39.360246,
    "longitude": -76.627881,
    "timeMillis": 1592611200631,
  },
  Object {
    "amplitude": -65,
    "dateTime": "2020-06-20T00:00:00.631Z",
    "direction": "GROUND",
    "ellipse": Object {
      "bearing": 82,
      "major": 0.5,
      "minor": 0.25,
    },
    "latitude": 39.355165,
    "longitude": -76.623955,
    "timeMillis": 1592611200631,
  },
  Object {
    "amplitude": 0,
    "dateTime": "2020-06-20T00:00:00.653Z",
    "direction": "CLOUD",
    "ellipse": Object {
      "bearing": -52,
      "major": 0.25,
      "minor": 0.25,
    },
    "latitude": 39.283483,
    "longitude": -76.666255,
    "timeMillis": 1592611200653,
  },
  Object {
    "amplitude": -20.3,
    "dateTime": "2020-06-20T00:00:00.653Z",
    "direction": "GROUND",
    "ellipse": Object {
      "bearing": -1,
      "major": 0.25,
      "minor": 0.25,
    },
    "latitude": 39.355049,
    "longitude": -76.568837,
    "timeMillis": 1592611200653,
  },
  Object {
    "amplitude": 0,
    "dateTime": "2020-06-20T00:00:00.653Z",
    "direction": "CLOUD",
    "ellipse": Object {
      "bearing": -74,
      "major": 0.5,
      "minor": 0.25,
    },
    "latitude": 39.390466,
    "longitude": -76.522296,
    "timeMillis": 1592611200653,
  },
  Object {
    "amplitude": 0,
    "dateTime": "2020-06-20T00:01:00.385Z",
    "direction": "CLOUD",
    "ellipse": Object {
      "bearing": -74,
      "major": 0.5,
      "minor": 0.25,
    },
    "latitude": 34.163358,
    "longitude": -80.874821,
    "timeMillis": 1592611260385,
  },
  Object {
    "amplitude": -26,
    "dateTime": "2020-06-20T00:01:00.552Z",
    "direction": "GROUND",
    "ellipse": Object {
      "bearing": -89,
      "major": 0.75,
      "minor": 0.25,
    },
    "latitude": 30.250675,
    "longitude": -82.357371,
    "timeMillis": 1592611260552,
  },
  Object {
    "amplitude": 0,
    "dateTime": "2020-06-20T00:01:00.552Z",
    "direction": "CLOUD",
    "ellipse": Object {
      "bearing": 83,
      "major": 0.25,
      "minor": 0.25,
    },
    "latitude": 30.263559,
    "longitude": -82.353037,
    "timeMillis": 1592611260552,
  },
  Object {
    "amplitude": -41.3,
    "dateTime": "2020-06-20T00:01:00.800Z",
    "direction": "GROUND",
    "ellipse": Object {
      "bearing": 11,
      "major": 1.75,
      "minor": 0.25,
    },
    "latitude": 16.24059,
    "longitude": -91.441549,
    "timeMillis": 1592611260800,
  },
  Object {
    "amplitude": -25.2,
    "dateTime": "2020-06-20T00:01:01.000Z",
    "direction": "GROUND",
    "ellipse": Object {
      "bearing": 7,
      "major": 0.5,
      "minor": 0.25,
    },
    "latitude": 59.46069,
    "longitude": 26.773836,
    "timeMillis": 1592611261000,
  },
  Object {
    "amplitude": -15.1,
    "dateTime": "2020-06-20T00:01:01.028Z",
    "direction": "GROUND",
    "ellipse": Object {
      "bearing": 11,
      "major": 0.75,
      "minor": 0.25,
    },
    "latitude": 59.507565,
    "longitude": 26.923863,
    "timeMillis": 1592611261028,
  },
  Object {
    "amplitude": -14,
    "dateTime": "2020-06-20T00:01:01.077Z",
    "direction": "GROUND",
    "ellipse": Object {
      "bearing": 11,
      "major": 1,
      "minor": 0.25,
    },
    "latitude": 59.500731,
    "longitude": 26.904206,
    "timeMillis": 1592611261077,
  },
  Object {
    "amplitude": 95.3,
    "dateTime": "2020-06-20T00:01:01.296Z",
    "direction": "GROUND",
    "ellipse": Object {
      "bearing": 19,
      "major": 0.25,
      "minor": 0.25,
    },
    "latitude": 56.359199,
    "longitude": 11.790852,
    "timeMillis": 1592611261296,
  },
  Object {
    "amplitude": 0,
    "dateTime": "2020-06-20T00:01:01.382Z",
    "direction": "CLOUD",
    "ellipse": Object {
      "bearing": 34,
      "major": 4.25,
      "minor": 0.5,
    },
    "latitude": 32.374309,
    "longitude": -101.650011,
    "timeMillis": 1592611261382,
  },
  Object {
    "amplitude": -29.9,
    "dateTime": "2020-06-20T00:01:01.382Z",
    "direction": "GROUND",
    "ellipse": Object {
      "bearing": -24,
      "major": 0.25,
      "minor": 0.25,
    },
    "latitude": 32.777182,
    "longitude": -101.366501,
    "timeMillis": 1592611261382,
  },
  Object {
    "amplitude": -56.6,
    "dateTime": "2020-06-20T00:02:00.077Z",
    "direction": "GROUND",
    "ellipse": Object {
      "bearing": 23,
      "major": 0.5,
      "minor": 0.25,
    },
    "latitude": 49.79451,
    "longitude": -79.357062,
    "timeMillis": 1592611320077,
  },
  Object {
    "amplitude": 28.7,
    "dateTime": "2020-06-20T00:02:00.235Z",
    "direction": "GROUND",
    "ellipse": Object {
      "bearing": 29,
      "major": 0.25,
      "minor": 0.25,
    },
    "latitude": 39.873289,
    "longitude": -101.955629,
    "timeMillis": 1592611320235,
  },
  Object {
    "amplitude": 19,
    "dateTime": "2020-06-20T00:02:00.289Z",
    "direction": "GROUND",
    "ellipse": Object {
      "bearing": -11,
      "major": 0.25,
      "minor": 0.25,
    },
    "latitude": 39.87736,
    "longitude": -101.995631,
    "timeMillis": 1592611320289,
  },
  Object {
    "amplitude": -13.1,
    "dateTime": "2020-06-20T00:02:00.981Z",
    "direction": "GROUND",
    "ellipse": Object {
      "bearing": -9,
      "major": 0.25,
      "minor": 0.25,
    },
    "latitude": 3.354772,
    "longitude": 105.181056,
    "timeMillis": 1592611320981,
  },
  Object {
    "amplitude": -18.2,
    "dateTime": "2020-06-20T00:02:01.364Z",
    "direction": "GROUND",
    "ellipse": Object {
      "bearing": -76,
      "major": 0.5,
      "minor": 0.25,
    },
    "latitude": 35.098912,
    "longitude": -79.969339,
    "timeMillis": 1592611321364,
  },
  Object {
    "amplitude": -35.9,
    "dateTime": "2020-06-20T00:02:01.370Z",
    "direction": "GROUND",
    "ellipse": Object {
      "bearing": -21,
      "major": 0.25,
      "minor": 0.25,
    },
    "latitude": 34.980473,
    "longitude": -80.069913,
    "timeMillis": 1592611321370,
  },
  Object {
    "amplitude": -29.8,
    "dateTime": "2020-06-20T00:02:01.517Z",
    "direction": "GROUND",
    "ellipse": Object {
      "bearing": -24,
      "major": 0.25,
      "minor": 0.25,
    },
    "latitude": 3.83109,
    "longitude": 105.974937,
    "timeMillis": 1592611321517,
  },
  Object {
    "amplitude": 0,
    "dateTime": "2020-06-20T00:02:01.544Z",
    "direction": "CLOUD",
    "ellipse": Object {
      "bearing": 16,
      "major": 0.5,
      "minor": 0.25,
    },
    "latitude": 3.858295,
    "longitude": 105.677619,
    "timeMillis": 1592611321544,
  },
  Object {
    "amplitude": -11,
    "dateTime": "2020-06-20T00:02:01.544Z",
    "direction": "GROUND",
    "ellipse": Object {
      "bearing": -8,
      "major": 0.25,
      "minor": 0.25,
    },
    "latitude": 3.811184,
    "longitude": 105.9039,
    "timeMillis": 1592611321544,
  },
  Object {
    "amplitude": -7.8,
    "dateTime": "2020-06-20T00:02:01.561Z",
    "direction": "GROUND",
    "ellipse": Object {
      "bearing": 16,
      "major": 0.5,
      "minor": 0.25,
    },
    "latitude": 3.858444,
    "longitude": 105.678063,
    "timeMillis": 1592611321561,
  },
]
`;

exports[`When parsing Blitzen When parsing Blitzen V2 should be able to merge two collections 1`] = `
Array [
  Object {
    "amplitude": -13.6,
    "dateTime": "2020-06-20T00:00:00.323Z",
    "direction": "GROUND",
    "ellipse": Object {
      "bearing": -12,
      "major": 0.25,
      "minor": 0.25,
    },
    "latitude": 3.79772,
    "longitude": 105.911369,
    "timeMillis": 1592611200323,
  },
  Object {
    "amplitude": 0,
    "dateTime": "2020-06-20T00:00:00.628Z",
    "direction": "CLOUD",
    "ellipse": Object {
      "bearing": -49,
      "major": 0.25,
      "minor": 0.25,
    },
    "latitude": 39.344666,
    "longitude": -76.645326,
    "timeMillis": 1592611200628,
  },
  Object {
    "amplitude": -6.4,
    "dateTime": "2020-06-20T00:00:00.629Z",
    "direction": "GROUND",
    "ellipse": Object {
      "bearing": 9,
      "major": 0.25,
      "minor": 0.25,
    },
    "latitude": 39.093173,
    "longitude": -76.516297,
    "timeMillis": 1592611200629,
  },
  Object {
    "amplitude": 0,
    "dateTime": "2020-06-20T00:00:00.631Z",
    "direction": "CLOUD",
    "ellipse": Object {
      "bearing": -28,
      "major": 0.5,
      "minor": 0.25,
    },
    "latitude": 39.359796,
    "longitude": -76.751111,
    "timeMillis": 1592611200631,
  },
  Object {
    "amplitude": 0,
    "dateTime": "2020-06-20T00:00:00.631Z",
    "direction": "CLOUD",
    "ellipse": Object {
      "bearing": -80,
      "major": 1.75,
      "minor": 0.25,
    },
    "latitude": 39.357346,
    "longitude": -76.699283,
    "timeMillis": 1592611200631,
  },
  Object {
    "amplitude": -66.2,
    "dateTime": "2020-06-20T00:00:00.631Z",
    "direction": "GROUND",
    "ellipse": Object {
      "bearing": -41,
      "major": 0.25,
      "minor": 0.25,
    },
    "latitude": 39.360246,
    "longitude": -76.627881,
    "timeMillis": 1592611200631,
  },
  Object {
    "amplitude": -65,
    "dateTime": "2020-06-20T00:00:00.631Z",
    "direction": "GROUND",
    "ellipse": Object {
      "bearing": 82,
      "major": 0.5,
      "minor": 0.25,
    },
    "latitude": 39.355165,
    "longitude": -76.623955,
    "timeMillis": 1592611200631,
  },
  Object {
    "amplitude": 0,
    "dateTime": "2020-06-20T00:00:00.653Z",
    "direction": "CLOUD",
    "ellipse": Object {
      "bearing": -52,
      "major": 0.25,
      "minor": 0.25,
    },
    "latitude": 39.283483,
    "longitude": -76.666255,
    "timeMillis": 1592611200653,
  },
  Object {
    "amplitude": -20.3,
    "dateTime": "2020-06-20T00:00:00.653Z",
    "direction": "GROUND",
    "ellipse": Object {
      "bearing": -1,
      "major": 0.25,
      "minor": 0.25,
    },
    "latitude": 39.355049,
    "longitude": -76.568837,
    "timeMillis": 1592611200653,
  },
  Object {
    "amplitude": 0,
    "dateTime": "2020-06-20T00:00:00.653Z",
    "direction": "CLOUD",
    "ellipse": Object {
      "bearing": -74,
      "major": 0.5,
      "minor": 0.25,
    },
    "latitude": 39.390466,
    "longitude": -76.522296,
    "timeMillis": 1592611200653,
  },
  Object {
    "amplitude": 0,
    "dateTime": "2020-06-20T00:01:00.385Z",
    "direction": "CLOUD",
    "ellipse": Object {
      "bearing": -74,
      "major": 0.5,
      "minor": 0.25,
    },
    "latitude": 34.163358,
    "longitude": -80.874821,
    "timeMillis": 1592611260385,
  },
  Object {
    "amplitude": -26,
    "dateTime": "2020-06-20T00:01:00.552Z",
    "direction": "GROUND",
    "ellipse": Object {
      "bearing": -89,
      "major": 0.75,
      "minor": 0.25,
    },
    "latitude": 30.250675,
    "longitude": -82.357371,
    "timeMillis": 1592611260552,
  },
  Object {
    "amplitude": 0,
    "dateTime": "2020-06-20T00:01:00.552Z",
    "direction": "CLOUD",
    "ellipse": Object {
      "bearing": 83,
      "major": 0.25,
      "minor": 0.25,
    },
    "latitude": 30.263559,
    "longitude": -82.353037,
    "timeMillis": 1592611260552,
  },
  Object {
    "amplitude": -41.3,
    "dateTime": "2020-06-20T00:01:00.800Z",
    "direction": "GROUND",
    "ellipse": Object {
      "bearing": 11,
      "major": 1.75,
      "minor": 0.25,
    },
    "latitude": 16.24059,
    "longitude": -91.441549,
    "timeMillis": 1592611260800,
  },
  Object {
    "amplitude": -25.2,
    "dateTime": "2020-06-20T00:01:01.000Z",
    "direction": "GROUND",
    "ellipse": Object {
      "bearing": 7,
      "major": 0.5,
      "minor": 0.25,
    },
    "latitude": 59.46069,
    "longitude": 26.773836,
    "timeMillis": 1592611261000,
  },
  Object {
    "amplitude": -15.1,
    "dateTime": "2020-06-20T00:01:01.028Z",
    "direction": "GROUND",
    "ellipse": Object {
      "bearing": 11,
      "major": 0.75,
      "minor": 0.25,
    },
    "latitude": 59.507565,
    "longitude": 26.923863,
    "timeMillis": 1592611261028,
  },
  Object {
    "amplitude": -14,
    "dateTime": "2020-06-20T00:01:01.077Z",
    "direction": "GROUND",
    "ellipse": Object {
      "bearing": 11,
      "major": 1,
      "minor": 0.25,
    },
    "latitude": 59.500731,
    "longitude": 26.904206,
    "timeMillis": 1592611261077,
  },
  Object {
    "amplitude": 95.3,
    "dateTime": "2020-06-20T00:01:01.296Z",
    "direction": "GROUND",
    "ellipse": Object {
      "bearing": 19,
      "major": 0.25,
      "minor": 0.25,
    },
    "latitude": 56.359199,
    "longitude": 11.790852,
    "timeMillis": 1592611261296,
  },
  Object {
    "amplitude": 0,
    "dateTime": "2020-06-20T00:01:01.382Z",
    "direction": "CLOUD",
    "ellipse": Object {
      "bearing": 34,
      "major": 4.25,
      "minor": 0.5,
    },
    "latitude": 32.374309,
    "longitude": -101.650011,
    "timeMillis": 1592611261382,
  },
  Object {
    "amplitude": -29.9,
    "dateTime": "2020-06-20T00:01:01.382Z",
    "direction": "GROUND",
    "ellipse": Object {
      "bearing": -24,
      "major": 0.25,
      "minor": 0.25,
    },
    "latitude": 32.777182,
    "longitude": -101.366501,
    "timeMillis": 1592611261382,
  },
]
`;

exports[`When parsing Blitzen When parsing Blitzen V2 should return valid Blitzen V2 1`] = `
Array [
  Object {
    "amplitude": -13.6,
    "dateTime": "2020-06-20T00:00:00.323Z",
    "direction": "GROUND",
    "ellipse": Object {
      "bearing": -12,
      "major": 0.25,
      "minor": 0.25,
    },
    "latitude": 3.79772,
    "longitude": 105.911369,
    "timeMillis": 1592611200323,
  },
  Object {
    "amplitude": 0,
    "dateTime": "2020-06-20T00:00:00.628Z",
    "direction": "CLOUD",
    "ellipse": Object {
      "bearing": -49,
      "major": 0.25,
      "minor": 0.25,
    },
    "latitude": 39.344666,
    "longitude": -76.645326,
    "timeMillis": 1592611200628,
  },
  Object {
    "amplitude": -6.4,
    "dateTime": "2020-06-20T00:00:00.629Z",
    "direction": "GROUND",
    "ellipse": Object {
      "bearing": 9,
      "major": 0.25,
      "minor": 0.25,
    },
    "latitude": 39.093173,
    "longitude": -76.516297,
    "timeMillis": 1592611200629,
  },
  Object {
    "amplitude": 0,
    "dateTime": "2020-06-20T00:00:00.631Z",
    "direction": "CLOUD",
    "ellipse": Object {
      "bearing": -28,
      "major": 0.5,
      "minor": 0.25,
    },
    "latitude": 39.359796,
    "longitude": -76.751111,
    "timeMillis": 1592611200631,
  },
  Object {
    "amplitude": 0,
    "dateTime": "2020-06-20T00:00:00.631Z",
    "direction": "CLOUD",
    "ellipse": Object {
      "bearing": -80,
      "major": 1.75,
      "minor": 0.25,
    },
    "latitude": 39.357346,
    "longitude": -76.699283,
    "timeMillis": 1592611200631,
  },
  Object {
    "amplitude": -66.2,
    "dateTime": "2020-06-20T00:00:00.631Z",
    "direction": "GROUND",
    "ellipse": Object {
      "bearing": -41,
      "major": 0.25,
      "minor": 0.25,
    },
    "latitude": 39.360246,
    "longitude": -76.627881,
    "timeMillis": 1592611200631,
  },
  Object {
    "amplitude": -65,
    "dateTime": "2020-06-20T00:00:00.631Z",
    "direction": "GROUND",
    "ellipse": Object {
      "bearing": 82,
      "major": 0.5,
      "minor": 0.25,
    },
    "latitude": 39.355165,
    "longitude": -76.623955,
    "timeMillis": 1592611200631,
  },
  Object {
    "amplitude": 0,
    "dateTime": "2020-06-20T00:00:00.653Z",
    "direction": "CLOUD",
    "ellipse": Object {
      "bearing": -52,
      "major": 0.25,
      "minor": 0.25,
    },
    "latitude": 39.283483,
    "longitude": -76.666255,
    "timeMillis": 1592611200653,
  },
  Object {
    "amplitude": -20.3,
    "dateTime": "2020-06-20T00:00:00.653Z",
    "direction": "GROUND",
    "ellipse": Object {
      "bearing": -1,
      "major": 0.25,
      "minor": 0.25,
    },
    "latitude": 39.355049,
    "longitude": -76.568837,
    "timeMillis": 1592611200653,
  },
  Object {
    "amplitude": 0,
    "dateTime": "2020-06-20T00:00:00.653Z",
    "direction": "CLOUD",
    "ellipse": Object {
      "bearing": -74,
      "major": 0.5,
      "minor": 0.25,
    },
    "latitude": 39.390466,
    "longitude": -76.522296,
    "timeMillis": 1592611200653,
  },
]
`;

exports[`When parsing Blitzen when parsing Blitzen V3 should be able to merge multiple collections 1`] = `
Array [
  Object {
    "amplitude": -13.6,
    "dateTime": "2020-06-20T00:00:00.323Z",
    "direction": "GROUND",
    "ellipse": Object {
      "bearing": -12,
      "major": 0.25,
      "minor": 0.25,
    },
    "latitude": 3.79772,
    "longitude": 105.911369,
    "nanosecondsRemainder": 0,
    "sensorDetails": Object {
      "chiSquared": 0,
      "degreesFreedom": 0,
      "peakTime": 0,
      "rangeNormalizedSignal": 0,
      "reportingSensors": 0,
      "riseTime": 0,
      "sensorInformation": "",
    },
    "timeMillis": 1592611200323,
  },
  Object {
    "amplitude": 0,
    "dateTime": "2020-06-20T00:00:00.628Z",
    "direction": "CLOUD",
    "ellipse": Object {
      "bearing": -49,
      "major": 0.25,
      "minor": 0.25,
    },
    "latitude": 39.344666,
    "longitude": -76.645326,
    "nanosecondsRemainder": 0,
    "sensorDetails": Object {
      "chiSquared": 0,
      "degreesFreedom": 0,
      "peakTime": 0,
      "rangeNormalizedSignal": 0,
      "reportingSensors": 0,
      "riseTime": 0,
      "sensorInformation": "",
    },
    "timeMillis": 1592611200628,
  },
  Object {
    "amplitude": -6.4,
    "dateTime": "2020-06-20T00:00:00.629Z",
    "direction": "GROUND",
    "ellipse": Object {
      "bearing": 9,
      "major": 0.25,
      "minor": 0.25,
    },
    "latitude": 39.093173,
    "longitude": -76.516297,
    "nanosecondsRemainder": 0,
    "sensorDetails": Object {
      "chiSquared": 0,
      "degreesFreedom": 0,
      "peakTime": 0,
      "rangeNormalizedSignal": 0,
      "reportingSensors": 0,
      "riseTime": 0,
      "sensorInformation": "",
    },
    "timeMillis": 1592611200629,
  },
  Object {
    "amplitude": 0,
    "dateTime": "2020-06-20T00:00:00.631Z",
    "direction": "CLOUD",
    "ellipse": Object {
      "bearing": -28,
      "major": 0.5,
      "minor": 0.25,
    },
    "latitude": 39.359796,
    "longitude": -76.751111,
    "nanosecondsRemainder": 0,
    "sensorDetails": Object {
      "chiSquared": 0,
      "degreesFreedom": 0,
      "peakTime": 0,
      "rangeNormalizedSignal": 0,
      "reportingSensors": 0,
      "riseTime": 0,
      "sensorInformation": "",
    },
    "timeMillis": 1592611200631,
  },
  Object {
    "amplitude": 0,
    "dateTime": "2020-06-20T00:00:00.631Z",
    "direction": "CLOUD",
    "ellipse": Object {
      "bearing": -80,
      "major": 1.75,
      "minor": 0.25,
    },
    "latitude": 39.357346,
    "longitude": -76.699283,
    "nanosecondsRemainder": 0,
    "sensorDetails": Object {
      "chiSquared": 0,
      "degreesFreedom": 0,
      "peakTime": 0,
      "rangeNormalizedSignal": 0,
      "reportingSensors": 0,
      "riseTime": 0,
      "sensorInformation": "",
    },
    "timeMillis": 1592611200631,
  },
  Object {
    "amplitude": -66.2,
    "dateTime": "2020-06-20T00:00:00.631Z",
    "direction": "GROUND",
    "ellipse": Object {
      "bearing": -41,
      "major": 0.25,
      "minor": 0.25,
    },
    "latitude": 39.360246,
    "longitude": -76.627881,
    "nanosecondsRemainder": 0,
    "sensorDetails": Object {
      "chiSquared": 0,
      "degreesFreedom": 0,
      "peakTime": 0,
      "rangeNormalizedSignal": 0,
      "reportingSensors": 0,
      "riseTime": 0,
      "sensorInformation": "",
    },
    "timeMillis": 1592611200631,
  },
  Object {
    "amplitude": -65,
    "dateTime": "2020-06-20T00:00:00.631Z",
    "direction": "GROUND",
    "ellipse": Object {
      "bearing": 82,
      "major": 0.5,
      "minor": 0.25,
    },
    "latitude": 39.355165,
    "longitude": -76.623955,
    "nanosecondsRemainder": 0,
    "sensorDetails": Object {
      "chiSquared": 0,
      "degreesFreedom": 0,
      "peakTime": 0,
      "rangeNormalizedSignal": 0,
      "reportingSensors": 0,
      "riseTime": 0,
      "sensorInformation": "",
    },
    "timeMillis": 1592611200631,
  },
  Object {
    "amplitude": 0,
    "dateTime": "2020-06-20T00:00:00.653Z",
    "direction": "CLOUD",
    "ellipse": Object {
      "bearing": -52,
      "major": 0.25,
      "minor": 0.25,
    },
    "latitude": 39.283483,
    "longitude": -76.666255,
    "nanosecondsRemainder": 0,
    "sensorDetails": Object {
      "chiSquared": 0,
      "degreesFreedom": 0,
      "peakTime": 0,
      "rangeNormalizedSignal": 0,
      "reportingSensors": 0,
      "riseTime": 0,
      "sensorInformation": "",
    },
    "timeMillis": 1592611200653,
  },
  Object {
    "amplitude": -20.3,
    "dateTime": "2020-06-20T00:00:00.653Z",
    "direction": "GROUND",
    "ellipse": Object {
      "bearing": -1,
      "major": 0.25,
      "minor": 0.25,
    },
    "latitude": 39.355049,
    "longitude": -76.568837,
    "nanosecondsRemainder": 0,
    "sensorDetails": Object {
      "chiSquared": 0,
      "degreesFreedom": 0,
      "peakTime": 0,
      "rangeNormalizedSignal": 0,
      "reportingSensors": 0,
      "riseTime": 0,
      "sensorInformation": "",
    },
    "timeMillis": 1592611200653,
  },
  Object {
    "amplitude": 0,
    "dateTime": "2020-06-20T00:00:00.653Z",
    "direction": "CLOUD",
    "ellipse": Object {
      "bearing": -74,
      "major": 0.5,
      "minor": 0.25,
    },
    "latitude": 39.390466,
    "longitude": -76.522296,
    "nanosecondsRemainder": 0,
    "sensorDetails": Object {
      "chiSquared": 0,
      "degreesFreedom": 0,
      "peakTime": 0,
      "rangeNormalizedSignal": 0,
      "reportingSensors": 0,
      "riseTime": 0,
      "sensorInformation": "",
    },
    "timeMillis": 1592611200653,
  },
  Object {
    "amplitude": 0,
    "dateTime": "2020-06-20T00:01:00.385Z",
    "direction": "CLOUD",
    "ellipse": Object {
      "bearing": -74,
      "major": 0.5,
      "minor": 0.25,
    },
    "latitude": 34.163358,
    "longitude": -80.874821,
    "nanosecondsRemainder": 0,
    "sensorDetails": Object {
      "chiSquared": 0,
      "degreesFreedom": 0,
      "peakTime": 0,
      "rangeNormalizedSignal": 0,
      "reportingSensors": 0,
      "riseTime": 0,
      "sensorInformation": "",
    },
    "timeMillis": 1592611260385,
  },
  Object {
    "amplitude": -26,
    "dateTime": "2020-06-20T00:01:00.552Z",
    "direction": "GROUND",
    "ellipse": Object {
      "bearing": -89,
      "major": 0.75,
      "minor": 0.25,
    },
    "latitude": 30.250675,
    "longitude": -82.357371,
    "nanosecondsRemainder": 0,
    "sensorDetails": Object {
      "chiSquared": 0,
      "degreesFreedom": 0,
      "peakTime": 0,
      "rangeNormalizedSignal": 0,
      "reportingSensors": 0,
      "riseTime": 0,
      "sensorInformation": "",
    },
    "timeMillis": 1592611260552,
  },
  Object {
    "amplitude": 0,
    "dateTime": "2020-06-20T00:01:00.552Z",
    "direction": "CLOUD",
    "ellipse": Object {
      "bearing": 83,
      "major": 0.25,
      "minor": 0.25,
    },
    "latitude": 30.263559,
    "longitude": -82.353037,
    "nanosecondsRemainder": 0,
    "sensorDetails": Object {
      "chiSquared": 0,
      "degreesFreedom": 0,
      "peakTime": 0,
      "rangeNormalizedSignal": 0,
      "reportingSensors": 0,
      "riseTime": 0,
      "sensorInformation": "",
    },
    "timeMillis": 1592611260552,
  },
  Object {
    "amplitude": -41.3,
    "dateTime": "2020-06-20T00:01:00.800Z",
    "direction": "GROUND",
    "ellipse": Object {
      "bearing": 11,
      "major": 1.75,
      "minor": 0.25,
    },
    "latitude": 16.24059,
    "longitude": -91.441549,
    "nanosecondsRemainder": 0,
    "sensorDetails": Object {
      "chiSquared": 0,
      "degreesFreedom": 0,
      "peakTime": 0,
      "rangeNormalizedSignal": 0,
      "reportingSensors": 0,
      "riseTime": 0,
      "sensorInformation": "",
    },
    "timeMillis": 1592611260800,
  },
  Object {
    "amplitude": -25.2,
    "dateTime": "2020-06-20T00:01:01.000Z",
    "direction": "GROUND",
    "ellipse": Object {
      "bearing": 7,
      "major": 0.5,
      "minor": 0.25,
    },
    "latitude": 59.46069,
    "longitude": 26.773836,
    "nanosecondsRemainder": 0,
    "sensorDetails": Object {
      "chiSquared": 0,
      "degreesFreedom": 0,
      "peakTime": 0,
      "rangeNormalizedSignal": 0,
      "reportingSensors": 0,
      "riseTime": 0,
      "sensorInformation": "",
    },
    "timeMillis": 1592611261000,
  },
  Object {
    "amplitude": -15.1,
    "dateTime": "2020-06-20T00:01:01.028Z",
    "direction": "GROUND",
    "ellipse": Object {
      "bearing": 11,
      "major": 0.75,
      "minor": 0.25,
    },
    "latitude": 59.507565,
    "longitude": 26.923863,
    "nanosecondsRemainder": 0,
    "sensorDetails": Object {
      "chiSquared": 0,
      "degreesFreedom": 0,
      "peakTime": 0,
      "rangeNormalizedSignal": 0,
      "reportingSensors": 0,
      "riseTime": 0,
      "sensorInformation": "",
    },
    "timeMillis": 1592611261028,
  },
  Object {
    "amplitude": -14,
    "dateTime": "2020-06-20T00:01:01.077Z",
    "direction": "GROUND",
    "ellipse": Object {
      "bearing": 11,
      "major": 1,
      "minor": 0.25,
    },
    "latitude": 59.500731,
    "longitude": 26.904206,
    "nanosecondsRemainder": 0,
    "sensorDetails": Object {
      "chiSquared": 0,
      "degreesFreedom": 0,
      "peakTime": 0,
      "rangeNormalizedSignal": 0,
      "reportingSensors": 0,
      "riseTime": 0,
      "sensorInformation": "",
    },
    "timeMillis": 1592611261077,
  },
  Object {
    "amplitude": 95.3,
    "dateTime": "2020-06-20T00:01:01.296Z",
    "direction": "GROUND",
    "ellipse": Object {
      "bearing": 19,
      "major": 0.25,
      "minor": 0.25,
    },
    "latitude": 56.359199,
    "longitude": 11.790852,
    "nanosecondsRemainder": 0,
    "sensorDetails": Object {
      "chiSquared": 0,
      "degreesFreedom": 0,
      "peakTime": 0,
      "rangeNormalizedSignal": 0,
      "reportingSensors": 0,
      "riseTime": 0,
      "sensorInformation": "",
    },
    "timeMillis": 1592611261296,
  },
  Object {
    "amplitude": 0,
    "dateTime": "2020-06-20T00:01:01.382Z",
    "direction": "CLOUD",
    "ellipse": Object {
      "bearing": 34,
      "major": 4.25,
      "minor": 0.5,
    },
    "latitude": 32.374309,
    "longitude": -101.650011,
    "nanosecondsRemainder": 0,
    "sensorDetails": Object {
      "chiSquared": 0,
      "degreesFreedom": 0,
      "peakTime": 0,
      "rangeNormalizedSignal": 0,
      "reportingSensors": 0,
      "riseTime": 0,
      "sensorInformation": "",
    },
    "timeMillis": 1592611261382,
  },
  Object {
    "amplitude": -29.9,
    "dateTime": "2020-06-20T00:01:01.382Z",
    "direction": "GROUND",
    "ellipse": Object {
      "bearing": -24,
      "major": 0.25,
      "minor": 0.25,
    },
    "latitude": 32.777182,
    "longitude": -101.366501,
    "nanosecondsRemainder": 0,
    "sensorDetails": Object {
      "chiSquared": 0,
      "degreesFreedom": 0,
      "peakTime": 0,
      "rangeNormalizedSignal": 0,
      "reportingSensors": 0,
      "riseTime": 0,
      "sensorInformation": "",
    },
    "timeMillis": 1592611261382,
  },
  Object {
    "amplitude": -56.6,
    "dateTime": "2020-06-20T00:02:00.077Z",
    "direction": "GROUND",
    "ellipse": Object {
      "bearing": 23,
      "major": 0.5,
      "minor": 0.25,
    },
    "latitude": 49.79451,
    "longitude": -79.357062,
    "nanosecondsRemainder": 0,
    "sensorDetails": Object {
      "chiSquared": 0,
      "degreesFreedom": 0,
      "peakTime": 0,
      "rangeNormalizedSignal": 0,
      "reportingSensors": 0,
      "riseTime": 0,
      "sensorInformation": "",
    },
    "timeMillis": 1592611320077,
  },
  Object {
    "amplitude": 28.7,
    "dateTime": "2020-06-20T00:02:00.235Z",
    "direction": "GROUND",
    "ellipse": Object {
      "bearing": 29,
      "major": 0.25,
      "minor": 0.25,
    },
    "latitude": 39.873289,
    "longitude": -101.955629,
    "nanosecondsRemainder": 0,
    "sensorDetails": Object {
      "chiSquared": 0,
      "degreesFreedom": 0,
      "peakTime": 0,
      "rangeNormalizedSignal": 0,
      "reportingSensors": 0,
      "riseTime": 0,
      "sensorInformation": "",
    },
    "timeMillis": 1592611320235,
  },
  Object {
    "amplitude": 19,
    "dateTime": "2020-06-20T00:02:00.289Z",
    "direction": "GROUND",
    "ellipse": Object {
      "bearing": -11,
      "major": 0.25,
      "minor": 0.25,
    },
    "latitude": 39.87736,
    "longitude": -101.995631,
    "nanosecondsRemainder": 0,
    "sensorDetails": Object {
      "chiSquared": 0,
      "degreesFreedom": 0,
      "peakTime": 0,
      "rangeNormalizedSignal": 0,
      "reportingSensors": 0,
      "riseTime": 0,
      "sensorInformation": "",
    },
    "timeMillis": 1592611320289,
  },
  Object {
    "amplitude": -13.1,
    "dateTime": "2020-06-20T00:02:00.981Z",
    "direction": "GROUND",
    "ellipse": Object {
      "bearing": -9,
      "major": 0.25,
      "minor": 0.25,
    },
    "latitude": 3.354772,
    "longitude": 105.181056,
    "nanosecondsRemainder": 0,
    "sensorDetails": Object {
      "chiSquared": 0,
      "degreesFreedom": 0,
      "peakTime": 0,
      "rangeNormalizedSignal": 0,
      "reportingSensors": 0,
      "riseTime": 0,
      "sensorInformation": "",
    },
    "timeMillis": 1592611320981,
  },
  Object {
    "amplitude": -18.2,
    "dateTime": "2020-06-20T00:02:01.364Z",
    "direction": "GROUND",
    "ellipse": Object {
      "bearing": -76,
      "major": 0.5,
      "minor": 0.25,
    },
    "latitude": 35.098912,
    "longitude": -79.969339,
    "nanosecondsRemainder": 0,
    "sensorDetails": Object {
      "chiSquared": 0,
      "degreesFreedom": 0,
      "peakTime": 0,
      "rangeNormalizedSignal": 0,
      "reportingSensors": 0,
      "riseTime": 0,
      "sensorInformation": "",
    },
    "timeMillis": 1592611321364,
  },
  Object {
    "amplitude": -35.9,
    "dateTime": "2020-06-20T00:02:01.370Z",
    "direction": "GROUND",
    "ellipse": Object {
      "bearing": -21,
      "major": 0.25,
      "minor": 0.25,
    },
    "latitude": 34.980473,
    "longitude": -80.069913,
    "nanosecondsRemainder": 0,
    "sensorDetails": Object {
      "chiSquared": 0,
      "degreesFreedom": 0,
      "peakTime": 0,
      "rangeNormalizedSignal": 0,
      "reportingSensors": 0,
      "riseTime": 0,
      "sensorInformation": "",
    },
    "timeMillis": 1592611321370,
  },
  Object {
    "amplitude": -29.8,
    "dateTime": "2020-06-20T00:02:01.517Z",
    "direction": "GROUND",
    "ellipse": Object {
      "bearing": -24,
      "major": 0.25,
      "minor": 0.25,
    },
    "latitude": 3.83109,
    "longitude": 105.974937,
    "nanosecondsRemainder": 0,
    "sensorDetails": Object {
      "chiSquared": 0,
      "degreesFreedom": 0,
      "peakTime": 0,
      "rangeNormalizedSignal": 0,
      "reportingSensors": 0,
      "riseTime": 0,
      "sensorInformation": "",
    },
    "timeMillis": 1592611321517,
  },
  Object {
    "amplitude": 0,
    "dateTime": "2020-06-20T00:02:01.544Z",
    "direction": "CLOUD",
    "ellipse": Object {
      "bearing": 16,
      "major": 0.5,
      "minor": 0.25,
    },
    "latitude": 3.858295,
    "longitude": 105.677619,
    "nanosecondsRemainder": 0,
    "sensorDetails": Object {
      "chiSquared": 0,
      "degreesFreedom": 0,
      "peakTime": 0,
      "rangeNormalizedSignal": 0,
      "reportingSensors": 0,
      "riseTime": 0,
      "sensorInformation": "",
    },
    "timeMillis": 1592611321544,
  },
  Object {
    "amplitude": -11,
    "dateTime": "2020-06-20T00:02:01.544Z",
    "direction": "GROUND",
    "ellipse": Object {
      "bearing": -8,
      "major": 0.25,
      "minor": 0.25,
    },
    "latitude": 3.811184,
    "longitude": 105.9039,
    "nanosecondsRemainder": 0,
    "sensorDetails": Object {
      "chiSquared": 0,
      "degreesFreedom": 0,
      "peakTime": 0,
      "rangeNormalizedSignal": 0,
      "reportingSensors": 0,
      "riseTime": 0,
      "sensorInformation": "",
    },
    "timeMillis": 1592611321544,
  },
  Object {
    "amplitude": -7.8,
    "dateTime": "2020-06-20T00:02:01.561Z",
    "direction": "GROUND",
    "ellipse": Object {
      "bearing": 16,
      "major": 0.5,
      "minor": 0.25,
    },
    "latitude": 3.858444,
    "longitude": 105.678063,
    "nanosecondsRemainder": 0,
    "sensorDetails": Object {
      "chiSquared": 0,
      "degreesFreedom": 0,
      "peakTime": 0,
      "rangeNormalizedSignal": 0,
      "reportingSensors": 0,
      "riseTime": 0,
      "sensorInformation": "",
    },
    "timeMillis": 1592611321561,
  },
]
`;

exports[`When parsing Blitzen when parsing Blitzen V3 should be able to merge two collections 1`] = `
Array [
  Object {
    "amplitude": -13.6,
    "dateTime": "2020-06-20T00:00:00.323Z",
    "direction": "GROUND",
    "ellipse": Object {
      "bearing": -12,
      "major": 0.25,
      "minor": 0.25,
    },
    "latitude": 3.79772,
    "longitude": 105.911369,
    "nanosecondsRemainder": 0,
    "sensorDetails": Object {
      "chiSquared": 0,
      "degreesFreedom": 0,
      "peakTime": 0,
      "rangeNormalizedSignal": 0,
      "reportingSensors": 0,
      "riseTime": 0,
      "sensorInformation": "",
    },
    "timeMillis": 1592611200323,
  },
  Object {
    "amplitude": 0,
    "dateTime": "2020-06-20T00:00:00.628Z",
    "direction": "CLOUD",
    "ellipse": Object {
      "bearing": -49,
      "major": 0.25,
      "minor": 0.25,
    },
    "latitude": 39.344666,
    "longitude": -76.645326,
    "nanosecondsRemainder": 0,
    "sensorDetails": Object {
      "chiSquared": 0,
      "degreesFreedom": 0,
      "peakTime": 0,
      "rangeNormalizedSignal": 0,
      "reportingSensors": 0,
      "riseTime": 0,
      "sensorInformation": "",
    },
    "timeMillis": 1592611200628,
  },
  Object {
    "amplitude": -6.4,
    "dateTime": "2020-06-20T00:00:00.629Z",
    "direction": "GROUND",
    "ellipse": Object {
      "bearing": 9,
      "major": 0.25,
      "minor": 0.25,
    },
    "latitude": 39.093173,
    "longitude": -76.516297,
    "nanosecondsRemainder": 0,
    "sensorDetails": Object {
      "chiSquared": 0,
      "degreesFreedom": 0,
      "peakTime": 0,
      "rangeNormalizedSignal": 0,
      "reportingSensors": 0,
      "riseTime": 0,
      "sensorInformation": "",
    },
    "timeMillis": 1592611200629,
  },
  Object {
    "amplitude": 0,
    "dateTime": "2020-06-20T00:00:00.631Z",
    "direction": "CLOUD",
    "ellipse": Object {
      "bearing": -28,
      "major": 0.5,
      "minor": 0.25,
    },
    "latitude": 39.359796,
    "longitude": -76.751111,
    "nanosecondsRemainder": 0,
    "sensorDetails": Object {
      "chiSquared": 0,
      "degreesFreedom": 0,
      "peakTime": 0,
      "rangeNormalizedSignal": 0,
      "reportingSensors": 0,
      "riseTime": 0,
      "sensorInformation": "",
    },
    "timeMillis": 1592611200631,
  },
  Object {
    "amplitude": 0,
    "dateTime": "2020-06-20T00:00:00.631Z",
    "direction": "CLOUD",
    "ellipse": Object {
      "bearing": -80,
      "major": 1.75,
      "minor": 0.25,
    },
    "latitude": 39.357346,
    "longitude": -76.699283,
    "nanosecondsRemainder": 0,
    "sensorDetails": Object {
      "chiSquared": 0,
      "degreesFreedom": 0,
      "peakTime": 0,
      "rangeNormalizedSignal": 0,
      "reportingSensors": 0,
      "riseTime": 0,
      "sensorInformation": "",
    },
    "timeMillis": 1592611200631,
  },
  Object {
    "amplitude": -66.2,
    "dateTime": "2020-06-20T00:00:00.631Z",
    "direction": "GROUND",
    "ellipse": Object {
      "bearing": -41,
      "major": 0.25,
      "minor": 0.25,
    },
    "latitude": 39.360246,
    "longitude": -76.627881,
    "nanosecondsRemainder": 0,
    "sensorDetails": Object {
      "chiSquared": 0,
      "degreesFreedom": 0,
      "peakTime": 0,
      "rangeNormalizedSignal": 0,
      "reportingSensors": 0,
      "riseTime": 0,
      "sensorInformation": "",
    },
    "timeMillis": 1592611200631,
  },
  Object {
    "amplitude": -65,
    "dateTime": "2020-06-20T00:00:00.631Z",
    "direction": "GROUND",
    "ellipse": Object {
      "bearing": 82,
      "major": 0.5,
      "minor": 0.25,
    },
    "latitude": 39.355165,
    "longitude": -76.623955,
    "nanosecondsRemainder": 0,
    "sensorDetails": Object {
      "chiSquared": 0,
      "degreesFreedom": 0,
      "peakTime": 0,
      "rangeNormalizedSignal": 0,
      "reportingSensors": 0,
      "riseTime": 0,
      "sensorInformation": "",
    },
    "timeMillis": 1592611200631,
  },
  Object {
    "amplitude": 0,
    "dateTime": "2020-06-20T00:00:00.653Z",
    "direction": "CLOUD",
    "ellipse": Object {
      "bearing": -52,
      "major": 0.25,
      "minor": 0.25,
    },
    "latitude": 39.283483,
    "longitude": -76.666255,
    "nanosecondsRemainder": 0,
    "sensorDetails": Object {
      "chiSquared": 0,
      "degreesFreedom": 0,
      "peakTime": 0,
      "rangeNormalizedSignal": 0,
      "reportingSensors": 0,
      "riseTime": 0,
      "sensorInformation": "",
    },
    "timeMillis": 1592611200653,
  },
  Object {
    "amplitude": -20.3,
    "dateTime": "2020-06-20T00:00:00.653Z",
    "direction": "GROUND",
    "ellipse": Object {
      "bearing": -1,
      "major": 0.25,
      "minor": 0.25,
    },
    "latitude": 39.355049,
    "longitude": -76.568837,
    "nanosecondsRemainder": 0,
    "sensorDetails": Object {
      "chiSquared": 0,
      "degreesFreedom": 0,
      "peakTime": 0,
      "rangeNormalizedSignal": 0,
      "reportingSensors": 0,
      "riseTime": 0,
      "sensorInformation": "",
    },
    "timeMillis": 1592611200653,
  },
  Object {
    "amplitude": 0,
    "dateTime": "2020-06-20T00:00:00.653Z",
    "direction": "CLOUD",
    "ellipse": Object {
      "bearing": -74,
      "major": 0.5,
      "minor": 0.25,
    },
    "latitude": 39.390466,
    "longitude": -76.522296,
    "nanosecondsRemainder": 0,
    "sensorDetails": Object {
      "chiSquared": 0,
      "degreesFreedom": 0,
      "peakTime": 0,
      "rangeNormalizedSignal": 0,
      "reportingSensors": 0,
      "riseTime": 0,
      "sensorInformation": "",
    },
    "timeMillis": 1592611200653,
  },
  Object {
    "amplitude": 0,
    "dateTime": "2020-06-20T00:01:00.385Z",
    "direction": "CLOUD",
    "ellipse": Object {
      "bearing": -74,
      "major": 0.5,
      "minor": 0.25,
    },
    "latitude": 34.163358,
    "longitude": -80.874821,
    "nanosecondsRemainder": 0,
    "sensorDetails": Object {
      "chiSquared": 0,
      "degreesFreedom": 0,
      "peakTime": 0,
      "rangeNormalizedSignal": 0,
      "reportingSensors": 0,
      "riseTime": 0,
      "sensorInformation": "",
    },
    "timeMillis": 1592611260385,
  },
  Object {
    "amplitude": -26,
    "dateTime": "2020-06-20T00:01:00.552Z",
    "direction": "GROUND",
    "ellipse": Object {
      "bearing": -89,
      "major": 0.75,
      "minor": 0.25,
    },
    "latitude": 30.250675,
    "longitude": -82.357371,
    "nanosecondsRemainder": 0,
    "sensorDetails": Object {
      "chiSquared": 0,
      "degreesFreedom": 0,
      "peakTime": 0,
      "rangeNormalizedSignal": 0,
      "reportingSensors": 0,
      "riseTime": 0,
      "sensorInformation": "",
    },
    "timeMillis": 1592611260552,
  },
  Object {
    "amplitude": 0,
    "dateTime": "2020-06-20T00:01:00.552Z",
    "direction": "CLOUD",
    "ellipse": Object {
      "bearing": 83,
      "major": 0.25,
      "minor": 0.25,
    },
    "latitude": 30.263559,
    "longitude": -82.353037,
    "nanosecondsRemainder": 0,
    "sensorDetails": Object {
      "chiSquared": 0,
      "degreesFreedom": 0,
      "peakTime": 0,
      "rangeNormalizedSignal": 0,
      "reportingSensors": 0,
      "riseTime": 0,
      "sensorInformation": "",
    },
    "timeMillis": 1592611260552,
  },
  Object {
    "amplitude": -41.3,
    "dateTime": "2020-06-20T00:01:00.800Z",
    "direction": "GROUND",
    "ellipse": Object {
      "bearing": 11,
      "major": 1.75,
      "minor": 0.25,
    },
    "latitude": 16.24059,
    "longitude": -91.441549,
    "nanosecondsRemainder": 0,
    "sensorDetails": Object {
      "chiSquared": 0,
      "degreesFreedom": 0,
      "peakTime": 0,
      "rangeNormalizedSignal": 0,
      "reportingSensors": 0,
      "riseTime": 0,
      "sensorInformation": "",
    },
    "timeMillis": 1592611260800,
  },
  Object {
    "amplitude": -25.2,
    "dateTime": "2020-06-20T00:01:01.000Z",
    "direction": "GROUND",
    "ellipse": Object {
      "bearing": 7,
      "major": 0.5,
      "minor": 0.25,
    },
    "latitude": 59.46069,
    "longitude": 26.773836,
    "nanosecondsRemainder": 0,
    "sensorDetails": Object {
      "chiSquared": 0,
      "degreesFreedom": 0,
      "peakTime": 0,
      "rangeNormalizedSignal": 0,
      "reportingSensors": 0,
      "riseTime": 0,
      "sensorInformation": "",
    },
    "timeMillis": 1592611261000,
  },
  Object {
    "amplitude": -15.1,
    "dateTime": "2020-06-20T00:01:01.028Z",
    "direction": "GROUND",
    "ellipse": Object {
      "bearing": 11,
      "major": 0.75,
      "minor": 0.25,
    },
    "latitude": 59.507565,
    "longitude": 26.923863,
    "nanosecondsRemainder": 0,
    "sensorDetails": Object {
      "chiSquared": 0,
      "degreesFreedom": 0,
      "peakTime": 0,
      "rangeNormalizedSignal": 0,
      "reportingSensors": 0,
      "riseTime": 0,
      "sensorInformation": "",
    },
    "timeMillis": 1592611261028,
  },
  Object {
    "amplitude": -14,
    "dateTime": "2020-06-20T00:01:01.077Z",
    "direction": "GROUND",
    "ellipse": Object {
      "bearing": 11,
      "major": 1,
      "minor": 0.25,
    },
    "latitude": 59.500731,
    "longitude": 26.904206,
    "nanosecondsRemainder": 0,
    "sensorDetails": Object {
      "chiSquared": 0,
      "degreesFreedom": 0,
      "peakTime": 0,
      "rangeNormalizedSignal": 0,
      "reportingSensors": 0,
      "riseTime": 0,
      "sensorInformation": "",
    },
    "timeMillis": 1592611261077,
  },
  Object {
    "amplitude": 95.3,
    "dateTime": "2020-06-20T00:01:01.296Z",
    "direction": "GROUND",
    "ellipse": Object {
      "bearing": 19,
      "major": 0.25,
      "minor": 0.25,
    },
    "latitude": 56.359199,
    "longitude": 11.790852,
    "nanosecondsRemainder": 0,
    "sensorDetails": Object {
      "chiSquared": 0,
      "degreesFreedom": 0,
      "peakTime": 0,
      "rangeNormalizedSignal": 0,
      "reportingSensors": 0,
      "riseTime": 0,
      "sensorInformation": "",
    },
    "timeMillis": 1592611261296,
  },
  Object {
    "amplitude": 0,
    "dateTime": "2020-06-20T00:01:01.382Z",
    "direction": "CLOUD",
    "ellipse": Object {
      "bearing": 34,
      "major": 4.25,
      "minor": 0.5,
    },
    "latitude": 32.374309,
    "longitude": -101.650011,
    "nanosecondsRemainder": 0,
    "sensorDetails": Object {
      "chiSquared": 0,
      "degreesFreedom": 0,
      "peakTime": 0,
      "rangeNormalizedSignal": 0,
      "reportingSensors": 0,
      "riseTime": 0,
      "sensorInformation": "",
    },
    "timeMillis": 1592611261382,
  },
  Object {
    "amplitude": -29.9,
    "dateTime": "2020-06-20T00:01:01.382Z",
    "direction": "GROUND",
    "ellipse": Object {
      "bearing": -24,
      "major": 0.25,
      "minor": 0.25,
    },
    "latitude": 32.777182,
    "longitude": -101.366501,
    "nanosecondsRemainder": 0,
    "sensorDetails": Object {
      "chiSquared": 0,
      "degreesFreedom": 0,
      "peakTime": 0,
      "rangeNormalizedSignal": 0,
      "reportingSensors": 0,
      "riseTime": 0,
      "sensorInformation": "",
    },
    "timeMillis": 1592611261382,
  },
]
`;

exports[`When parsing Blitzen when parsing Blitzen V3 should return valid Blitzen V3 1`] = `
Array [
  Object {
    "amplitude": -13.6,
    "dateTime": "2020-06-20T00:00:00.323Z",
    "direction": "GROUND",
    "ellipse": Object {
      "bearing": -12,
      "major": 0.25,
      "minor": 0.25,
    },
    "latitude": 3.79772,
    "longitude": 105.911369,
    "nanosecondsRemainder": 0,
    "sensorDetails": Object {
      "chiSquared": 0,
      "degreesFreedom": 0,
      "peakTime": 0,
      "rangeNormalizedSignal": 0,
      "reportingSensors": 0,
      "riseTime": 0,
      "sensorInformation": "",
    },
    "timeMillis": 1592611200323,
  },
  Object {
    "amplitude": 0,
    "dateTime": "2020-06-20T00:00:00.628Z",
    "direction": "CLOUD",
    "ellipse": Object {
      "bearing": -49,
      "major": 0.25,
      "minor": 0.25,
    },
    "latitude": 39.344666,
    "longitude": -76.645326,
    "nanosecondsRemainder": 0,
    "sensorDetails": Object {
      "chiSquared": 0,
      "degreesFreedom": 0,
      "peakTime": 0,
      "rangeNormalizedSignal": 0,
      "reportingSensors": 0,
      "riseTime": 0,
      "sensorInformation": "",
    },
    "timeMillis": 1592611200628,
  },
  Object {
    "amplitude": -6.4,
    "dateTime": "2020-06-20T00:00:00.629Z",
    "direction": "GROUND",
    "ellipse": Object {
      "bearing": 9,
      "major": 0.25,
      "minor": 0.25,
    },
    "latitude": 39.093173,
    "longitude": -76.516297,
    "nanosecondsRemainder": 0,
    "sensorDetails": Object {
      "chiSquared": 0,
      "degreesFreedom": 0,
      "peakTime": 0,
      "rangeNormalizedSignal": 0,
      "reportingSensors": 0,
      "riseTime": 0,
      "sensorInformation": "",
    },
    "timeMillis": 1592611200629,
  },
  Object {
    "amplitude": 0,
    "dateTime": "2020-06-20T00:00:00.631Z",
    "direction": "CLOUD",
    "ellipse": Object {
      "bearing": -28,
      "major": 0.5,
      "minor": 0.25,
    },
    "latitude": 39.359796,
    "longitude": -76.751111,
    "nanosecondsRemainder": 0,
    "sensorDetails": Object {
      "chiSquared": 0,
      "degreesFreedom": 0,
      "peakTime": 0,
      "rangeNormalizedSignal": 0,
      "reportingSensors": 0,
      "riseTime": 0,
      "sensorInformation": "",
    },
    "timeMillis": 1592611200631,
  },
  Object {
    "amplitude": 0,
    "dateTime": "2020-06-20T00:00:00.631Z",
    "direction": "CLOUD",
    "ellipse": Object {
      "bearing": -80,
      "major": 1.75,
      "minor": 0.25,
    },
    "latitude": 39.357346,
    "longitude": -76.699283,
    "nanosecondsRemainder": 0,
    "sensorDetails": Object {
      "chiSquared": 0,
      "degreesFreedom": 0,
      "peakTime": 0,
      "rangeNormalizedSignal": 0,
      "reportingSensors": 0,
      "riseTime": 0,
      "sensorInformation": "",
    },
    "timeMillis": 1592611200631,
  },
  Object {
    "amplitude": -66.2,
    "dateTime": "2020-06-20T00:00:00.631Z",
    "direction": "GROUND",
    "ellipse": Object {
      "bearing": -41,
      "major": 0.25,
      "minor": 0.25,
    },
    "latitude": 39.360246,
    "longitude": -76.627881,
    "nanosecondsRemainder": 0,
    "sensorDetails": Object {
      "chiSquared": 0,
      "degreesFreedom": 0,
      "peakTime": 0,
      "rangeNormalizedSignal": 0,
      "reportingSensors": 0,
      "riseTime": 0,
      "sensorInformation": "",
    },
    "timeMillis": 1592611200631,
  },
  Object {
    "amplitude": -65,
    "dateTime": "2020-06-20T00:00:00.631Z",
    "direction": "GROUND",
    "ellipse": Object {
      "bearing": 82,
      "major": 0.5,
      "minor": 0.25,
    },
    "latitude": 39.355165,
    "longitude": -76.623955,
    "nanosecondsRemainder": 0,
    "sensorDetails": Object {
      "chiSquared": 0,
      "degreesFreedom": 0,
      "peakTime": 0,
      "rangeNormalizedSignal": 0,
      "reportingSensors": 0,
      "riseTime": 0,
      "sensorInformation": "",
    },
    "timeMillis": 1592611200631,
  },
  Object {
    "amplitude": 0,
    "dateTime": "2020-06-20T00:00:00.653Z",
    "direction": "CLOUD",
    "ellipse": Object {
      "bearing": -52,
      "major": 0.25,
      "minor": 0.25,
    },
    "latitude": 39.283483,
    "longitude": -76.666255,
    "nanosecondsRemainder": 0,
    "sensorDetails": Object {
      "chiSquared": 0,
      "degreesFreedom": 0,
      "peakTime": 0,
      "rangeNormalizedSignal": 0,
      "reportingSensors": 0,
      "riseTime": 0,
      "sensorInformation": "",
    },
    "timeMillis": 1592611200653,
  },
  Object {
    "amplitude": -20.3,
    "dateTime": "2020-06-20T00:00:00.653Z",
    "direction": "GROUND",
    "ellipse": Object {
      "bearing": -1,
      "major": 0.25,
      "minor": 0.25,
    },
    "latitude": 39.355049,
    "longitude": -76.568837,
    "nanosecondsRemainder": 0,
    "sensorDetails": Object {
      "chiSquared": 0,
      "degreesFreedom": 0,
      "peakTime": 0,
      "rangeNormalizedSignal": 0,
      "reportingSensors": 0,
      "riseTime": 0,
      "sensorInformation": "",
    },
    "timeMillis": 1592611200653,
  },
  Object {
    "amplitude": 0,
    "dateTime": "2020-06-20T00:00:00.653Z",
    "direction": "CLOUD",
    "ellipse": Object {
      "bearing": -74,
      "major": 0.5,
      "minor": 0.25,
    },
    "latitude": 39.390466,
    "longitude": -76.522296,
    "nanosecondsRemainder": 0,
    "sensorDetails": Object {
      "chiSquared": 0,
      "degreesFreedom": 0,
      "peakTime": 0,
      "rangeNormalizedSignal": 0,
      "reportingSensors": 0,
      "riseTime": 0,
      "sensorInformation": "",
    },
    "timeMillis": 1592611200653,
  },
]
`;
